--- a/flappy-bird/flappybird.css
+++ b/flappy-bird/flappybird.css
@@ -4,6 +4,7 @@ body {
 }
 
 #board {
+    margin-top: 70px;
     /*background-color: skyblue */
-    background-image: url("./flappybirdbg2.png");
+    background-image: url("./flappy-background.png");
 }
